--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "Command-line utility that simplifies node debugging",
     "keywords": ["debug", "debugger", "debugging", "node", "inspector", "node-inspector", "chrome"],
     "author": "Will Allan <billyzkid@yahoo.com>",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "preferGlobal": true,
     "licenses": [{
         "type": "MIT",
@@ -13,6 +13,7 @@
         "nodebug": "./bin/nodebug.js"
     },
     "dependencies": {
+		"node-inspector": ">=0.1.10",
         "optimist": "0.3.x"
     },
     "repository": {
