Updated version number

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "nodebug",
-    "description": "Command-line utility that simplifies node debugging",
-    "keywords": ["debug", "debugger", "debugging", "node", "inspector", "node-inspector", "chrome"],
+    "description": "Command line utility that simplifies node debugging",
+    "keywords": ["debug", "debugger", "debugging", "node", "inspector", "node-inspector", "chrome", "windows", "mac", "macos", "linux", "unix", "command line", "utility"],
     "author": "Will Allan <billyzkid@yahoo.com>",
-    "version": "0.1.3",
+    "version": "0.1.5",
     "preferGlobal": true,
     "licenses": [{
         "type": "MIT",
